--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@insforge/sdk": "^1.0.4",
     "next": "^14.2.35",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
     "repomix": "^1.7.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.5.4"
   }
 }
