--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "backup": "git add -A && git commit -m \"chore: backup\" || echo \"No changes to commit\"; git push"
   },
   "dependencies": {
-    "@insforge/sdk": "^1.0.4",
+    "@supabase/supabase-js": "^2.89.0",
     "next": "^14.2.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
