--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -H 0.0.0.0 -p 3000",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "repomix": "repomix",
     "backup": "git add -A && git commit -m \"chore: backup\" || echo \"No changes to commit\"; git push"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/supabase-js": "^2.89.0",
     "next": "^14.2.35",
     "react": "^18.3.1",
