--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "backup": "git add -A && git commit -m \"chore: backup\" || echo \"No changes to commit\"; git push"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
     "next": "^14.2.35",
     "react": "^18.3.1",
